--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fake-indexeddb": "^4.0.2",
     "html-webpack-plugin": "^5.5.3",
     "http-server": "^14.1.1",
+    "idb": "^7.1.1",
     "idb-keyval": "^6.2.1",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
