--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "idb-keyval": "^6.2.1",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
-    "jquery": "^3.7.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
@@ -42,7 +41,8 @@
     "whatwg-fetch": "^3.6.2"
   },
   "dependencies": {
-    "regenerator-runtime": "^0.14.0"
+    "regenerator-runtime": "^0.14.0",
+    "jquery": "^3.7.1"
   },
   "directories": {
     "test": "tests"
