--- a/package.json
+++ b/package.json
@@ -38,11 +38,16 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0",
-    "whatwg-fetch": "^3.6.2"
+    "webpack-pwa-manifest": "^4.3.0",
+    "whatwg-fetch": "^3.6.2",
+    "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
+    "jquery": "^3.7.1",
     "regenerator-runtime": "^0.14.0",
-    "jquery": "^3.7.1"
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0",
+    "workbox-window": "^7.0.0"
   },
   "directories": {
     "test": "tests"
