--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "http-server": "^14.1.1",
     "idb": "^7.1.1",
     "idb-keyval": "^6.2.1",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "style-loader": "^3.3.1",
@@ -44,6 +46,7 @@
   },
   "dependencies": {
     "jquery": "^3.7.1",
+    "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.14.0",
     "workbox-routing": "^7.0.0",
     "workbox-strategies": "^7.0.0",
