--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest-environment-jsdom": "^29.6.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0",
@@ -46,6 +47,7 @@
   },
   "dependencies": {
     "jquery": "^3.7.1",
+    "jquery-inview": "^1.1.2",
     "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.14.0",
     "workbox-routing": "^7.0.0",
