--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --config webpack.prod.js",
     "serve": "http-server dist",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "e2e": "codeceptjs run --steps"
   },
   "keywords": [],
   "author": "your_name <your.email@domain.com>",
@@ -21,6 +22,7 @@
     "babel-jest": "^29.6.1",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
+    "codeceptjs": "^3.5.8",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.54.0",
@@ -35,6 +37,7 @@
     "imagemin-webpack-plugin": "^2.4.2",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "playwright": "^1.40.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.89.0",
     "webpack-bundle-analyzer": "^4.10.1",
