--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@jest/globals": "^29.6.1",
+    "@testing-library/jest-dom": "^6.1.5",
     "@types/jest": "^29.5.3",
     "axios": "^1.6.2",
     "babel-jest": "^29.6.1",
@@ -33,9 +34,10 @@
     "http-server": "^14.1.1",
     "idb": "^7.1.1",
     "idb-keyval": "^6.2.1",
+    "identity-obj-proxy": "^3.0.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
-    "jest": "^29.6.1",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.6.1",
     "playwright": "^1.40.1",
     "style-loader": "^3.3.1",
