--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jquery-inview": "^1.1.2",
     "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.14.0",
+    "sharp": "^0.33.0",
     "workbox-routing": "^7.0.0",
     "workbox-strategies": "^7.0.0",
     "workbox-window": "^7.0.0"
